<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#e43f3f"
    tools:context=".Activity.SignupActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />




        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:id="@+id/textlayout1"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:textColorHint="#cccccc"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:layout_margin="16dp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textlayout2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textlayout1" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:textColorHint="#cccccc"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:layout_margin="16dp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="0dp"
            android:id="@+id/signbtn"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp"
            android:background="#cc1d1d"
            android:textSize="16sp"
            android:text="@string/create_account"
            android:textStyle="bold"
            android:textColor="#ffffff"
            app:layout_constraintTop_toBottomOf="@+id/textlayout2" />

        <TextView android:id="@+id/link_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signbtn"
            android:padding="16dp"
            android:text="@string/already_a_member_login"
            android:textColor="#ffffff"
            android:gravity="center"
            android:textSize="16sp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>